--- a/css/layout.css
+++ b/css/layout.css
@@ -10,6 +10,8 @@ nav {
     align-items: center;
     justify-content: space-between;
     height: 40px;
+    top: 0;
+    position: sticky;
 }
 
 nav ul {
@@ -33,4 +35,6 @@ main {
 footer {
     display: flex;
     align-items: center;
+    bottom: 0;
+    position: sticky;
 }
