--- a/css/header.css
+++ b/css/header.css
@@ -7,8 +7,10 @@ header {
 header div {
     padding: 10px;
 }
-
 .header_left {
-    font-size: 2rem;
+    font-size: 30px;
     font-weight: bold;
+}
+.header_right {
+    font-size: 20px;
 }
