--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,11 @@ main section {
     padding: 10px;
 }
 
+main div {
+    line-height: 130%;
+    font-size: 20px;
+}
+
 img {
     border-radius: 45%;
 }
