header_left css 변경
가로 30%
텍스트 가로 가운데 정렬 적용

--- a/css/header.css
+++ b/css/header.css
@@ -10,6 +10,8 @@ header div {
 .header_left {
     font-size: 30px;
     font-weight: bold;
+    width: 30%;
+    text-align: center;
 }
 .header_right {
     font-size: 20px;
